--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
-    "build-storybook": "build-storybook -s public",
-    "proxy": "http://localhost:8001"
+    "build-storybook": "build-storybook -s public"
   },
   "browserslist": {
     "production": [
@@ -42,6 +41,7 @@
     "@testing-library/react": "^8.0.7",
     "sass": "^1.53.0"
   },
+  "proxy": "http://localhost:8001",
   "jest": {
     "watchPathIgnorePatterns": [
       "<rootDir>/node_modules/",
